[package]
name = "polkadot-sdk-frame"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://paritytech.github.io"
repository.workspace = true
description = "The single package to get you started with building frame pallets and runtimes"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# external deps
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { workspace = true }

# primitive deps, used for developing FRAME pallets.
soil-arithmetic = { workspace = true }
soil-core = { workspace = true }
soil-io = { workspace = true }
soil-runtime = { workspace = true }

# frame deps, for developing FRAME pallets.
frame-support = { workspace = true }
frame-system = { workspace = true }

# primitive types used for developing FRAME runtimes.
soil-api = { optional = true, workspace = true }
soil-block-builder = { optional = true, workspace = true }
soil-consensus-aura = { optional = true, workspace = true }
soil-consensus-grandpa = { optional = true, workspace = true }
soil-genesis-builder = { optional = true, workspace = true }
soil-inherents = { optional = true, workspace = true }
soil-keyring = { optional = true, workspace = true }
soil-offchain = { optional = true, workspace = true }
soil-session = { optional = true, workspace = true }
soil-storage = { optional = true, workspace = true }
soil-transaction-pool = { optional = true, workspace = true }
soil-version = { optional = true, workspace = true }

frame-executive = { optional = true, workspace = true }
frame-system-rpc-runtime-api = { optional = true, workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { optional = true, workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }

# Used for try-runtime
frame-try-runtime = { optional = true, workspace = true }

docify = { workspace = true }
log = { workspace = true }

[features]
default = ["runtime", "std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive?/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api?/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"soil-api?/std",
	"soil-arithmetic/std",
	"soil-block-builder?/std",
	"soil-consensus-aura?/std",
	"soil-consensus-grandpa?/std",
	"soil-core/std",
	"soil-genesis-builder?/std",
	"soil-inherents?/std",
	"soil-io/std",
	"soil-keyring?/std",
	"soil-offchain?/std",
	"soil-runtime/std",
	"soil-session?/std",
	"soil-storage/std",
	"soil-transaction-pool?/std",
	"soil-version?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"soil-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"soil-runtime/try-runtime",
]
experimental = ["frame-support/experimental"]
runtime = [
	"frame-executive",
	"frame-system-rpc-runtime-api",
	"soil-api",
	"soil-block-builder",
	"soil-consensus-aura",
	"soil-consensus-grandpa",
	"soil-genesis-builder",
	"soil-inherents",
	"soil-keyring",
	"soil-offchain",
	"soil-session",
	"soil-storage",
	"soil-transaction-pool",
	"soil-version",
]
