[package]
name = "sc-basic-authorship"
version = "0.34.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
soil-block-builder = { workspace = true, default-features = true }
sc-proposer-metrics = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
soil-transaction-pool = { workspace = true, default-features = true }
soil-api = { workspace = true, default-features = true }
soil-blockchain = { workspace = true, default-features = true }
soil-consensus = { workspace = true, default-features = true }
soil-core = { workspace = true, default-features = true }
soil-inherents = { workspace = true, default-features = true }
soil-runtime = { workspace = true, default-features = true }
soil-state-machine = { workspace = true, default-features = true }
soil-trie = { workspace = true, default-features = true }

[dev-dependencies]
parking_lot = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
substrate-test-runtime-client = { workspace = true }
