[package]
name = "sc-executor"
version = "0.32.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "A crate that provides means of executing/dispatching calls into the runtime."
documentation = "https://docs.rs/sc-executor"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
name = "bench"
harness = false

[dependencies]
parking_lot = { workspace = true, default-features = true }
schnellru = { workspace = true }
tracing = { workspace = true, default-features = true }

codec = { workspace = true, default-features = true }
sc-executor-common = { workspace = true, default-features = true }
sc-executor-polkavm = { workspace = true, default-features = true }
sc-executor-wasmtime = { workspace = true, default-features = true }
soil-api = { workspace = true, default-features = true }
soil-core = { workspace = true, default-features = true }
soil-externalities = { workspace = true, default-features = true }
soil-io = { workspace = true, default-features = true }
soil-panic-handler = { workspace = true, default-features = true }
soil-runtime-interface = { workspace = true, default-features = true }
soil-trie = { workspace = true, default-features = true }
soil-version = { workspace = true, default-features = true }
soil-wasm-interface = { workspace = true, default-features = true }

[dev-dependencies]
array-bytes = { workspace = true, default-features = true }
assert_matches = { workspace = true }
criterion = { workspace = true, default-features = true }
num_cpus = { workspace = true }
paste = { workspace = true, default-features = true }
sc-runtime-test = { workspace = true }
sc-tracing = { workspace = true, default-features = true }
soil-crypto-hashing = { workspace = true, default-features = true }
soil-maybe-compressed-blob = { workspace = true, default-features = true }
soil-runtime = { workspace = true, default-features = true }
soil-state-machine = { workspace = true, default-features = true }
soil-tracing = { workspace = true, default-features = true }
substrate-test-runtime = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
wat = { workspace = true }

[features]
default = ["std"]
# This crate does not have `no_std` support, we just require this for tests
std = [
	"sc-runtime-test/std",
	"soil-api/std",
	"soil-core/std",
	"soil-externalities/std",
	"soil-io/std",
	"soil-runtime-interface/std",
	"soil-runtime/std",
	"soil-state-machine/std",
	"soil-tracing/std",
	"soil-trie/std",
	"soil-version/std",
	"soil-wasm-interface/std",
	"substrate-test-runtime/std",
]
wasm-extern-trace = []
