[package]
description = "Substrate mixnet service"
name = "sc-mixnet"
version = "0.4.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
homepage.workspace = true
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
arrayvec = { workspace = true }
blake2 = { workspace = true, default-features = true }
bytes = { workspace = true, default-features = true }
codec = { features = ["derive"], workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
mixnet = { workspace = true }
parking_lot = { workspace = true, default-features = true }
soil-client-api = { workspace = true, default-features = true }
soil-network = { workspace = true, default-features = true }
soil-network-types = { workspace = true, default-features = true }
soil-transaction-pool-api = { workspace = true, default-features = true }
soil-api = { workspace = true, default-features = true }
soil-consensus = { workspace = true, default-features = true }
soil-core = { workspace = true, default-features = true }
soil-keystore = { workspace = true, default-features = true }
soil-mixnet = { workspace = true, default-features = true }
soil-runtime = { workspace = true, default-features = true }
thiserror = { workspace = true }
