[package]
name = "sc-rpc"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Substrate Client RPC"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-channel = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
soil-block-builder = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-mixnet = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-statement-store = { workspace = true, default-features = true }
sc-tracing = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sc-utils = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
soil-api = { workspace = true, default-features = true }
soil-blockchain = { workspace = true, default-features = true }
soil-core = { workspace = true, default-features = true }
soil-keystore = { workspace = true, default-features = true }
soil-offchain = { workspace = true, default-features = true }
soil-rpc = { workspace = true, default-features = true }
soil-runtime = { workspace = true, default-features = true }
soil-session = { workspace = true, default-features = true }
soil-statement-store = { workspace = true, default-features = true }
soil-version = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-timer = { workspace = true }
pretty_assertions = { workspace = true }
sc-network = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
soil-consensus = { workspace = true, default-features = true }
soil-crypto-hashing = { workspace = true, default-features = true }
soil-keystore = { workspace = true, default-features = true }
substrate-test-runtime-client = { workspace = true }
tempfile = { workspace = true }

[features]
test-helpers = []
