[package]
name = "sc-statement-store"
version = "10.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Substrate statement store."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-channel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, default-features = true }
parity-db = { workspace = true }
parking_lot = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
soil-client-api = { workspace = true, default-features = true }
sc-keystore = { workspace = true, default-features = true }
soil-network-statement = { workspace = true, default-features = true }
soil-utils = { workspace = true }
soil-api = { workspace = true, default-features = true }
soil-blockchain = { workspace = true, default-features = true }
soil-core = { workspace = true, default-features = true }
soil-runtime = { workspace = true, default-features = true }
soil-statement-store = { workspace = true, default-features = true }
soil-storage = { workspace = true, default-features = true }
tokio = { features = ["time"], workspace = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true, default-features = true }
soil-tracing = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "statement_store"
harness = false
required-features = []
