[package]
name = "plant-alliance"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Alliance pallet provides a collective for standard-setting industry collaboration."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { optional = true, workspace = true, default-features = true }
log = { workspace = true }

codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

subsoil = { workspace = true }
subsoil-crypto-hashing = { optional = true, workspace = true }

topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true }

plant-collective = { optional = true, workspace = true }
plant-identity = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true, default-features = true }
plant-balances = { workspace = true, default-features = true }
plant-collective = { workspace = true, default-features = true }
subsoil-crypto-hashing = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"log/std",
	"plant-balances/std",
	"plant-collective?/std",
	"plant-identity/std",
	"scale-info/std",
	"subsoil/std",
	"subsoil-crypto-hashing?/std",
]
runtime-benchmarks = [
	"array-bytes",
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"plant-collective/runtime-benchmarks",
	"plant-identity/runtime-benchmarks",
	"subsoil-crypto-hashing",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-balances/try-runtime",
	"plant-collective?/try-runtime",
	"plant-identity/try-runtime",
	"subsoil/try-runtime",
]
