[package]
name = "plant-asset-rate"
version = "0.0.0-dev"
publish = false
description = "Whitelist non-native assets for treasury spending and provide conversion to native balance"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"plant-balances/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-balances/try-runtime",
	"subsoil/try-runtime",
]
