[package]
name = "plant-asset-rewards"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME asset rewards pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
topsoil-benchmarking = { workspace = true, optional = true }
topsoil-support = { workspace = true, features = ["experimental"] }
topsoil-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
subsoil = { workspace = true }

[dev-dependencies]
plant-assets = { workspace = true }
plant-assets-freezer = { workspace = true }
topsoil-balances = { workspace = true }
primitive-types = { workspace = true, features = ["codec", "num-traits", "scale-info"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"plant-assets-freezer/std",
	"plant-assets/std",
	"topsoil-balances/std",
	"primitive-types/std",
	"scale-info/std",
	"subsoil/std"]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"plant-assets-freezer/runtime-benchmarks",
	"plant-assets/runtime-benchmarks",
	"topsoil-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks"]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"plant-assets-freezer/try-runtime",
	"plant-assets/try-runtime",
	"topsoil-balances/try-runtime",
	"subsoil/try-runtime"]
