[package]
name = "plant-asset-rewards"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME asset rewards pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
topsoil-benchmarking = { workspace = true, optional = true }
topsoil-core = { workspace = true, features = ["experimental"] }
scale-info = { workspace = true, features = ["derive"] }
subsoil = { workspace = true }

[dev-dependencies]
plant-assets = { workspace = true }
plant-assets-freezer = { workspace = true }
plant-balances = { workspace = true }
primitive-types = { workspace = true, features = ["codec", "num-traits", "scale-info"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"plant-assets-freezer/std",
	"plant-assets/std",
	"plant-balances/std",
	"primitive-types/std",
	"scale-info/std",
	"subsoil/std"]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-assets-freezer/runtime-benchmarks",
	"plant-assets/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks"]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-assets-freezer/try-runtime",
	"plant-assets/try-runtime",
	"plant-balances/try-runtime",
	"subsoil/try-runtime"]
