[package]
name = "plant-assets-freezer"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Provides freezing features to `pallet-assets`"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
topsoil = { workspace = true, features = ["runtime"] }
log = { workspace = true }
plant-assets = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
plant-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil/std",
	"log/std",
	"plant-assets/std",
	"plant-balances/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"topsoil/runtime-benchmarks",
	"plant-assets/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
]
try-runtime = [
	"topsoil/try-runtime",
	"plant-assets/try-runtime",
	"plant-balances/try-runtime",
]
