[package]
name = "plant-atomic-swap"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME atomic swap pallet"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
topsoil = { workspace = true, features = ["runtime"] }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil/std",
	"plant-balances/std",
	"scale-info/std",
]
try-runtime = [
	"topsoil/try-runtime",
	"plant-balances/try-runtime",
]
