[package]
name = "plant-broker"
version = "0.0.0-dev"
publish = false
description = "Brokerage tool for managing Polkadot Core scheduling"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitvec = { workspace = true }
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }
[dev-dependencies]
pretty_assertions = { workspace = true }
subsoil = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"bitvec/std",
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"subsoil/runtime-benchmarks"]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"subsoil/try-runtime"]
