[package]
name = "plant-child-bounties"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet to manage child bounties"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true }
log = { workspace = true }
plant-bounties = { workspace = true }
plant-treasury = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"log/std",
	"plant-balances/std",
	"plant-bounties/std",
	"plant-treasury/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking",
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"plant-bounties/runtime-benchmarks",
	"plant-treasury/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-balances/try-runtime",
	"plant-bounties/try-runtime",
	"plant-treasury/try-runtime",
	"subsoil/try-runtime",
]
