[package]
name = "plant-core-fellowship"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Logic as per the description of The Fellowship for core Polkadot technology"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true }
log = { workspace = true }
plant-ranked-collective = { optional = true, workspace = true }
scale-info = { features = ["derive"], workspace = true }
subsoil = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/experimental",
	"topsoil-core/std",
	"log/std",
	"plant-ranked-collective/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-ranked-collective/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-ranked-collective?/try-runtime",
	"subsoil/try-runtime",
]
