[package]
name = "plant-dap"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet for Dynamic Allocation Pool (DAP)"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-core = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }
subsoil = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-core/std",
	"log/std",
	"plant-balances/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-core/try-runtime",
	"plant-balances/try-runtime",
	"subsoil/try-runtime",
]
