[package]
name = "plant-democracy"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet for democracy"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
topsoil-benchmarking = { optional = true, workspace = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["derive"], optional = true, workspace = true, default-features = true }
subsoil = { workspace = true }

[dev-dependencies]
plant-balances = { workspace = true, default-features = true }
plant-preimage = { workspace = true, default-features = true }
plant-scheduler = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"plant-balances/std",
	"plant-preimage/std",
	"plant-scheduler/std",
	"scale-info/std",
	"serde",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"plant-preimage/runtime-benchmarks",
	"plant-scheduler/runtime-benchmarks",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"plant-balances/try-runtime",
	"plant-preimage/try-runtime",
	"plant-scheduler/try-runtime",
	"subsoil/try-runtime",
]
