[package]
name = "plant-dummy-dim"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Dummy DIM Pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
topsoil-benchmarking = { workspace = true, optional = true }
topsoil-support = { workspace = true }
topsoil-system = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
subsoil = { workspace = true }

[dev-dependencies]
plant-people = { workspace = true }
verifiable = { workspace = true, features = ["small-ring"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"plant-people/std",
	"scale-info/std",
	"subsoil/std",
	"verifiable/std"]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"plant-people/runtime-benchmarks",
	"subsoil/runtime-benchmarks"]
try-runtime = [
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"plant-people/try-runtime",
	"subsoil/try-runtime"]
