[package]
name = "plant-election-provider-multi-block"
version = "0.0.0-dev"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PALLET multi phase+block election providers"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
log = { workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }

plant-election-provider = { workspace = true }
topsoil-core = { workspace = true }

subsoil = { features = ["serde"], workspace = true }

# Optional imports for benchmarking
topsoil-benchmarking = { optional = true, workspace = true }
rand = { features = ["alloc", "small_rng"], optional = true, workspace = true }

[dev-dependencies]
topsoil-benchmarking = { workspace = true, default-features = true }
plant-balances = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"plant-election-provider/std",
	"topsoil-core/std",
	"log/std",
	"plant-balances/std",
	"rand/std",
	"scale-info/std",
	"subsoil/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"plant-election-provider/runtime-benchmarks",
	"topsoil-core/runtime-benchmarks",
	"plant-balances/runtime-benchmarks",
	"rand",
	"subsoil/runtime-benchmarks",
]
try-runtime = [
	"plant-election-provider/try-runtime",
	"topsoil-core/try-runtime",
	"plant-balances/try-runtime",
	"subsoil/try-runtime",
]
