[package]
name = "plant-election-provider-multi-phase"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PALLET two phase election providers"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

topsoil-support = { workspace = true }
topsoil-system = { workspace = true }

plant-election-provider = { workspace = true }
subsoil = { workspace = true }

# Optional imports for benchmarking
topsoil-benchmarking = { optional = true, workspace = true }
rand = { features = ["alloc", "small_rng"], optional = true, workspace = true }
strum = { features = ["derive"], optional = true, workspace = true }

# optional for remote testing
hex = { workspace = true, default-features = true, optional = true }
remote-externalities = { workspace = true, default-features = true, optional = true }
tokio = { features = ["macros"], workspace = true, default-features = true, optional = true }

[dev-dependencies]
topsoil-benchmarking = { workspace = true, default-features = true }
topsoil-balances = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
subsoil = { workspace = true, default-features = true }


[features]
remote-mining = ["hex", "remote-externalities", "tokio"]
default = ["std"]
std = [
	"codec/std",
	"topsoil-benchmarking?/std",
	"plant-election-provider/std",
	"topsoil-support/std",
	"topsoil-system/std",
	"log/std",
	"topsoil-balances/std",
	"rand/std",
	"scale-info/std",
	"subsoil/std",
	"strum/std",
]
runtime-benchmarks = [
	"topsoil-benchmarking/runtime-benchmarks",
	"plant-election-provider/runtime-benchmarks",
	"topsoil-support/runtime-benchmarks",
	"topsoil-system/runtime-benchmarks",
	"topsoil-balances/runtime-benchmarks",
	"rand",
	"subsoil/runtime-benchmarks",
	"strum",
]
try-runtime = [
	"plant-election-provider/try-runtime",
	"topsoil-support/try-runtime",
	"topsoil-system/try-runtime",
	"topsoil-balances/try-runtime",
	"subsoil/try-runtime",
]
